Upgrade dependencies and Gradle wrapper, add JVM arguments for native access